{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 56,
  "lineage": "8731906a-40d7-e275-6836-8dc5f1cfd1c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:380270640472:instance/i-0c0202b3e2fa05141",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2CodeDeployInstanceProfile",
            "id": "i-0c0202b3e2fa05141",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "barrios-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-077c1660ef4c6a73c"
              }
            ],
            "primary_network_interface_id": "eni-077c1660ef4c6a73c",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.247",
            "public_ip": "18.234.139.131",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d884b91bc06c20e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eeb60bbf4a9cea9",
            "tags": {
              "Name": "Backend-Server"
            },
            "tags_all": {
              "Name": "Backend-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e01aa3431b39c00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "i-0c0202b3e2fa05141",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_codedeploy_profile",
            "aws_iam_role.ec2_codedeploy_role",
            "aws_security_group.alb_sg_primary",
            "aws_security_group.ec2_sg_primary",
            "aws_subnet.primary_public_a",
            "aws_vpc.primary",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:380270640472:instance/i-0f737a3f8e433c8cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2CodeDeployInstanceProfile",
            "id": "i-0f737a3f8e433c8cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "barrios-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05b97a4ec8ab37a3c"
              }
            ],
            "primary_network_interface_id": "eni-05b97a4ec8ab37a3c",
            "private_dns": "ip-10-0-2-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.164",
            "public_ip": "35.175.137.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d20705d46cd1a7fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d877d81136390ef9",
            "tags": {
              "Name": "Frontend-Server"
            },
            "tags_all": {
              "Name": "Frontend-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e01aa3431b39c00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "i-0f737a3f8e433c8cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_codedeploy_profile",
            "aws_iam_role.ec2_codedeploy_role",
            "aws_security_group.alb_sg_primary",
            "aws_security_group.ec2_sg_primary",
            "aws_subnet.primary_public_b",
            "aws_vpc.primary",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "restore_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8ff527aeca17d19",
            "arn": "arn:aws:ec2:us-west-2:380270640472:instance/i-0652d033b53efb5a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RestoreHostInstanceProfile",
            "id": "i-0652d033b53efb5a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "barrios-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b8701e9d7d6d1662"
              }
            ],
            "primary_network_interface_id": "eni-0b8701e9d7d6d1662",
            "private_dns": "ip-10-1-1-105.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.105",
            "public_dns": "ec2-44-242-190-108.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.190.108",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05eb8c89d92483147",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebcb0f3d567d2002",
            "tags": {
              "Name": "Restore-Host"
            },
            "tags_all": {
              "Name": "Restore-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0079a686cb25d0674"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "i-0652d033b53efb5a8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.restore_host_profile",
            "aws_iam_role.restore_host_role",
            "aws_security_group.ec2_sg_dr",
            "aws_subnet.dr_public_a",
            "aws_vpc.dr",
            "data.aws_ami.amazon_linux_2023_dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:internet-gateway/igw-0d6dd515eda604071",
            "id": "igw-0d6dd515eda604071",
            "owner_id": "380270640472",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-igw"
            },
            "tags_all": {
              "Name": "dr-igw"
            },
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:internet-gateway/igw-085bfd39c653afb5d",
            "id": "igw-085bfd39c653afb5d",
            "owner_id": "380270640472",
            "region": "us-east-1",
            "tags": {
              "Name": "primary-igw"
            },
            "tags_all": {
              "Name": "primary-igw"
            },
            "vpc_id": "vpc-08432e03696833950"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:380270640472:loadbalancer/app/dr-app-lb/2653dd8d28fd15db",
            "arn_suffix": "app/dr-app-lb/2653dd8d28fd15db",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dr-app-lb-1804557247.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:380270640472:loadbalancer/app/dr-app-lb/2653dd8d28fd15db",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dr-app-lb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-074edd3963e046a1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c198098dc5d4ddb"
              },
              {
                "subnet_id": "subnet-0ebcb0f3d567d2002"
              }
            ],
            "subnets": [
              "subnet-08c198098dc5d4ddb",
              "subnet-0ebcb0f3d567d2002"
            ],
            "tags": {
              "Name": "dr-app-lb"
            },
            "tags_all": {
              "Name": "dr-app-lb"
            },
            "vpc_id": "vpc-07a113fc6466fd897",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:380270640472:loadbalancer/app/dr-app-lb/2653dd8d28fd15db"
          },
          "dependencies": [
            "aws_security_group.alb_sg_dr",
            "aws_subnet.dr_public_a",
            "aws_subnet.dr_public_b",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:security-group/sg-074edd3963e046a1f",
            "description": "Allow HTTP inbound traffic for DR ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074edd3963e046a1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-dr",
            "name_prefix": "",
            "owner_id": "380270640472",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-dr"
            },
            "tags_all": {
              "Name": "alb-sg-dr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "sg-074edd3963e046a1f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:security-group/sg-0b6ed5ed3eee380ca",
            "description": "Allow HTTP inbound traffic for primary ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6ed5ed3eee380ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-primary",
            "name_prefix": "",
            "owner_id": "380270640472",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-primary"
            },
            "tags_all": {
              "Name": "alb-sg-primary"
            },
            "timeouts": null,
            "vpc_id": "vpc-08432e03696833950"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "sg-0b6ed5ed3eee380ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:security-group/sg-0079a686cb25d0674",
            "description": "Allow DB and SSH traffic for DR restore",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0079a686cb25d0674",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH for debugging",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL traffic from within the same SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "ec2-sg-dr",
            "name_prefix": "",
            "owner_id": "380270640472",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-dr"
            },
            "tags_all": {
              "Name": "ec2-sg-dr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "sg-0079a686cb25d0674",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:security-group/sg-03e01aa3431b39c00",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e01aa3431b39c00",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic on port 5000 from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6ed5ed3eee380ca"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6ed5ed3eee380ca"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg-primary",
            "name_prefix": "",
            "owner_id": "380270640472",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-primary"
            },
            "tags_all": {
              "Name": "ec2-sg-primary"
            },
            "timeouts": null,
            "vpc_id": "vpc-08432e03696833950"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "sg-03e01aa3431b39c00",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg_primary",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:subnet/subnet-08400945726b86297",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08400945726b86297",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-private-subnet-a"
            },
            "tags_all": {
              "Name": "dr-private-subnet-a"
            },
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-08400945726b86297",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:subnet/subnet-0f4207b283a22f2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4207b283a22f2fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-private-subnet-b"
            },
            "tags_all": {
              "Name": "dr-private-subnet-b"
            },
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-0f4207b283a22f2fc",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:subnet/subnet-0ebcb0f3d567d2002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebcb0f3d567d2002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-public-subnet-a"
            },
            "tags_all": {
              "Name": "dr-public-subnet-a"
            },
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-0ebcb0f3d567d2002",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:subnet/subnet-08c198098dc5d4ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c198098dc5d4ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-public-subnet-b"
            },
            "tags_all": {
              "Name": "dr-public-subnet-b"
            },
            "vpc_id": "vpc-07a113fc6466fd897"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-08c198098dc5d4ddb",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:subnet/subnet-03eeb60bbf4a9cea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eeb60bbf4a9cea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "primary-public-subnet-a"
            },
            "tags_all": {
              "Name": "primary-public-subnet-a"
            },
            "vpc_id": "vpc-08432e03696833950"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-03eeb60bbf4a9cea9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:subnet/subnet-0d877d81136390ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d877d81136390ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380270640472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "primary-public-subnet-b"
            },
            "tags_all": {
              "Name": "primary-public-subnet-b"
            },
            "vpc_id": "vpc-08432e03696833950"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "subnet-0d877d81136390ef9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:380270640472:vpc/vpc-07a113fc6466fd897",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01b4efc91fd90ee2a",
            "default_route_table_id": "rtb-04b42cb153356124f",
            "default_security_group_id": "sg-053bd78fc13f706e3",
            "dhcp_options_id": "dopt-03b8d685b3f10408c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a113fc6466fd897",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b42cb153356124f",
            "owner_id": "380270640472",
            "region": "us-west-2",
            "tags": {
              "Name": "dr-vpc"
            },
            "tags_all": {
              "Name": "dr-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "vpc-07a113fc6466fd897",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380270640472:vpc/vpc-08432e03696833950",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052612aacdd3c5afe",
            "default_route_table_id": "rtb-06ca8085690259b75",
            "default_security_group_id": "sg-04a66b6a232ecc1fa",
            "dhcp_options_id": "dopt-012ea19d6f9798f61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08432e03696833950",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ca8085690259b75",
            "owner_id": "380270640472",
            "region": "us-east-1",
            "tags": {
              "Name": "primary-vpc"
            },
            "tags_all": {
              "Name": "primary-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380270640472",
            "id": "vpc-08432e03696833950",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}